@@ -1,6 +1,13 @@
 2015-02-28  Martin Liska  <mliska@suse.cz>
 	    Jan Hubicka   <hubicka@ucw.cz>
 
+	* gcc.dg/ipa/ipa-icf-35.c: New test.
+	* gcc.dg/ipa/ipa-icf-36.c: New test.
+	* gcc.dg/ipa/ipa-icf-37.c: New test.
+
+2015-02-28  Martin Liska  <mliska@suse.cz>
+	    Jan Hubicka   <hubicka@ucw.cz>
+
 	PR ipa/65245
 	* gcc.dg/ipa/ipa-icf-34.c: New test.
 
